Add new <p> element, change alert

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Hello Git</h1>
+    <p>This is my second commit.</p>
     <form>
       <input type="text" placeholder="Enter your e-mail" />
       <input type="text" placeholder="Enter your password" />
